--- a/http_server/templates/index.html
+++ b/http_server/templates/index.html
@@ -74,12 +74,32 @@
             left: 20px;
             width: 250px;
         }
+        #panel {
+            position: fixed;
+            background-color: white;
+            max-height: 90%;
+            overflow-y: auto;
+            top: 10px;
+            left: 10px;
+            width: 280px;
+        }
+        #panel .amap-call {
+            background-color: #009cf9;
+            border-top-left-radius: 4px;
+   	        border-top-right-radius: 4px;
+        }
+        #panel .amap-lib-transfer {
+	        border-bottom-left-radius: 4px;
+   	        border-bottom-right-radius: 4px;
+            overflow: hidden;
+        }
     </style>
     
 </head>
 
 <body>
     <div id="container"></div>
+    <div id="panel"></div>
     <div class="control-panel">
         <div class="control-entry">
             <div>
@@ -141,6 +161,8 @@
     var workAddress, workMarker;
     //房源标记队列
     var rentMarkerArray = [];
+    //路线规划
+    var transfer;
     //多边形队列，存储公交到达的计算结果
     var polygonArray = [];
     //路径规划
@@ -218,48 +240,49 @@
         });
     }
     //添加标记点传入返回的js数据 数据格式【{object}，{object},{object}】
-    function addMarkerByPostion(marker_array){
+    function addMarkerByPostion(n){
         //信息窗体对象  信息窗体的使用，在房源标记被点击时弹出
         var infoWindow = new AMap.InfoWindow({offset: new AMap.Pixel(0, -30)});
-        $.each(marker_array,function(i,n){
-            console.log(n.house_name,n.message,n.url,n.address)
-            var marker = new AMap.Marker({
-                position: n.locat,//[123456,154432]位置
-                map: map
-            });
-            var mar_content = "<div>"
-            mar_content += "房源:"+n.house_name
-            mar_content += "房源来源："+n.message
-            mar_content += "房源链接：<a target = '_blank' href='"+n.url+"'>页面详情</a><div>";
-            marker.content = mar_content
-            //在房源标记被点击时打
-            marker.on('click', markerClick);
-            marker.emit('click', {target: marker});
-            // 规划路线
-            marker.on('click', function(e){
-                infoWindow.setContent(e.target.content);
-                infoWindow.open(map, e.target.getPosition());
-                // if (amapTransfer) amapTransfer.clear();
-                amapTransfer = new AMap.Transfer({
-                    map: map,
-                    policy: AMap.TransferPolicy.LEAST_TIME,
-                    city: "北京市",
-                    panel: 'transfer-panel'
-                });
-                //根据起、终点名称查询公交换乘路线
-                amapTransfer.search([{
-                    keyword: workAddress
-                }, {
-                    keyword: n.address
-                }], function(status, result) {})
-            });
-        })
-        function markerClick(e) {
+        console.log(n.house_name,n.message,n.url,n.address,n.locat)
+        var marker = new AMap.Marker({
+            position: n.locat,//[123456,154432]位置
+            map: map
+        });
+        var mar_content = "<div>"
+        mar_content += "房源:"+n.house_name
+        mar_content += "房源来源："+n.message
+        mar_content += "房源链接：<a tnarget = '_blank' href='"+n.url+"'>页面详情</a><div>";
+        marker.content = mar_content
+        //在房源标记被点击时打
+        rentMarkerArray.push(marker);
+        marker.on('click', function(e){
+            infoWindow.setContent(e.target.content);
+            //在标记的位置打开窗体
+            infoWindow.open(map, e.target.getPosition());
+        });
+        // 规划路线
+        marker.on('click', function(e){
             //鼠标移到标记上会显示标记content属性的内容
             infoWindow.setContent(e.target.content);
             //在标记的位置打开窗体
             infoWindow.open(map, e.target.getPosition());
-        }
+            var transOptions = {
+                map: map,
+                city: '北京市',
+                panel: 'panel',                            
+                //cityd:'乌鲁木齐',
+                policy: AMap.TransferPolicy.LEAST_TIME
+            };
+            //构造公交换乘类
+            transfer = new AMap.Transfer(transOptions);
+            transfer.
+            //根据起、终点坐标查询公交换乘路线
+            transfer.search(new AMap.LngLat(x,y), new AMap.LngLat(n.locat[0],n.locat[1]), function(status, result) {
+                // result即是对应的公交路线数据信息，相关数据结构文档请参考  https://lbs.amap.com/api/javascript-api/reference/route-search#m_TransferResult
+                if (status === 'complete') {
+                }
+            });
+        })
     }
 
     // function addMarkerByAddress(address) {
@@ -286,22 +309,22 @@
     //                 //在标记的位置打开窗体
     //                 infoWindow.open(map, e.target.getPosition());
     //             });
-    //             rentMarker.on('click', function(e) {
-    //                 infoWindow.setContent(e.target.content);
-    //                 infoWindow.open(map, e.target.getPosition());
-    //                 if (amapTransfer) amapTransfer.clear();
-    //                 amapTransfer = new AMap.Transfer({
-    //                     map: map,
-    //                     policy: AMap.TransferPolicy.LEAST_TIME,
-    //                     city: "北京市",
-    //                     panel: 'transfer-panel'
-    //                 });
-    //                 amapTransfer.search([{
-    //                     keyword: workAddress
-    //                 }, {
-    //                     keyword: address
-    //                 }], function(status, result) {})
-    //             });
+                // rentMarker.on('click', function(e) {
+                //     infoWindow.setContent(e.target.content);
+                //     infoWindow.open(map, e.target.getPosition());
+                //     if (amapTransfer) amapTransfer.clear();
+                //     amapTransfer = new AMap.Transfer({
+                //         map: map,
+                //         policy: AMap.TransferPolicy.LEAST_TIME,
+                //         city: "北京市",
+                //         panel: 'transfer-panel'
+                //     });
+                //     amapTransfer.search([{
+                //         keyword: workAddress
+                //     }, {
+                //         keyword: address
+                //     }], function(status, result) {})
+                // });
     //         }
     //     })
     // }
@@ -388,8 +411,12 @@
             display: 'none'
             })
             if (200 == result.code){
+
                 //根据返回信息 在地图创建标记点
-                addMarkerByPostion(result.data)
+                delRentLocation();
+                $.each(result.data,function(i,n){
+                    addMarkerByPostion(n)
+                })
             }
             else{
                 alert(result.error)
